--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/work_start"
+        android:title="@string/work_start"
+        android:icon="@drawable/emo_im_money_mouth"
+        android:orderInCategory="1" />
+    <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings" android:icon="@drawable/ic_menu_preferences"/>
-    <item android:id="@+id/work_start" android:title="@string/work_start" android:icon="@drawable/emo_im_money_mouth"></item>
-    <item android:id="@+id/exit_on_enter" android:title="@string/exit_on_enter" android:icon="@drawable/ic_lock_power_off"></item>
+        android:icon="@drawable/ic_menu_preferences"
+        android:orderInCategory="2"
+        android:title="@string/action_settings" />
+    <item
+        android:id="@+id/exit_on_enter"
+        android:icon="@drawable/ic_lock_power_off"
+        android:title="@string/exit_on_enter"
+        android:orderInCategory="3" />
 
 </menu>
