--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -6,60 +6,55 @@
         <EditTextPreference
             android:key="USER_LOGIN"
             android:title="Логин"
-            android:summary="Логин для входа в Систему\n"
+            android:summary="Логин для входа в Систему"
             android:dialogTitle="Логин"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите логин используемый для входа в Систему"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="text"
             android:defaultValue="">
         </EditTextPreference>
         <EditTextPreference
             android:key="USER_PSW"
             android:title="Пароль"
-            android:summary="Пароль для входа в Систему\n"
+            android:summary="Пароль для входа в Систему"
             android:dialogTitle="Пароль"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите пароль, используемый для входа в Систему"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="textPassword"
             android:defaultValue="">
         </EditTextPreference>
         <EditTextPreference
             android:key="IP1"
             android:title="Адрес сервера"
-            android:summary="Основной адрес(ip/имя) сервера\n"
+            android:summary="Основной адрес (ip/имя) сервера"
             android:dialogTitle="Основной IP"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите основной адрес(доменное имя) сервера"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="text"
             android:defaultValue="0.0.0.0">
         </EditTextPreference>
         <EditTextPreference
             android:key="IP1_PORT"
             android:title="Порт основного IP"
-            android:summary="Порт доступа основного IP-адреса сервера\n"
+            android:summary="Порт доступа основного IP-адреса сервера"
             android:dialogTitle="Порт основного IP"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите порт доступа основного IP-адреса сервера"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="number"
             android:defaultValue="6030">
         </EditTextPreference>
         <EditTextPreference
             android:key="WSS1_PORT"
             android:title="Порт основного WS"
-            android:summary="Порт доступа основного WS-адреса сервера\n"
+            android:summary="Порт доступа основного WS-адреса сервера"
             android:dialogTitle="Порт основного WS"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите порт доступа основного WS-адреса сервера"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="number"
             android:defaultValue="8088">
         </EditTextPreference>
@@ -101,12 +96,11 @@
     <EditTextPreference 
         android:key="REGION_PHONE_CODE" 
         android:title="Код местного региона"
-        android:summary="Установка телефонного кода местного региона\n"
+        android:summary="Установка телефонного кода местного региона"
         android:dialogTitle="Код местного региона"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите код местного региона"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="86133"
         android:visibility="invisible"
@@ -134,12 +128,11 @@
     <EditTextPreference 
         android:key="CHECK_CONN_TIME" 
         android:title="Время проверки соединения"
-        android:summary="Установка частоты проверки соединения с сервером\n"
+        android:summary="Установка частоты проверки соединения с сервером"
         android:dialogTitle="Время проверки соединения"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите время проверки соединения с сервером"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="600"
         android:visibility="invisible"
@@ -148,12 +141,11 @@
     <EditTextPreference 
         android:key="RECONNECT_NUMBERS" 
         android:title="Попыток соединения"
-        android:summary="Количество попыток соединения с сервером\n"
+        android:summary="Количество попыток соединения с сервером"
         android:dialogTitle="Попыток соединения"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите количество попыток соединения с сервером"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="600"
         android:visibility="invisible"
@@ -188,7 +180,6 @@
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите телефонный номер диспетчера"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:enabled="true">
@@ -200,12 +191,11 @@
     <EditTextPreference 
         android:key="IP2" 
         android:title="Резервный IP"
-        android:summary="Резервный IP-адрес сервера\n"
+        android:summary="Резервный IP-адрес сервера"
         android:dialogTitle="Резервный IP"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите резервный IP-адрес сервера"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:visibility="invisible"
@@ -214,12 +204,11 @@
     <EditTextPreference 
         android:key="IP2_PORT" 
         android:title="Порт резервного IP"
-        android:summary="Порт доступа резервного IP-адреса сервера\n"
+        android:summary="Порт доступа резервного IP-адреса сервера"
         android:dialogTitle="Порт резервного IP"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите порт доступа резервного IP-адреса сервера"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue=""
         android:visibility="invisible"
@@ -228,12 +217,11 @@
     <EditTextPreference 
         android:key="SOCK_CONN_TIMEOUT" 
         android:title="Таймаут соединения"
-        android:summary="Таймаут соединения с сокет-сервером\n"
+        android:summary="Таймаут соединения с сокет-сервером"
         android:dialogTitle="Таймаут соединения"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите таймаут соединения с сокет-сервером"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="0"
         android:visibility="invisible"
@@ -274,12 +262,11 @@
     <EditTextPreference 
         android:key="GPS_SRV_ADR" 
         android:title="Адрес GPS-сервера"
-        android:summary="Базовый адрес GPS-сервера сброра информации\n"
+        android:summary="Базовый адрес GPS-сервера сброра информации"
         android:dialogTitle="Адрес GPS-сервера"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите адрес GPS-сервера сброра информации"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:visibility="invisible"
@@ -288,12 +275,11 @@
     <EditTextPreference 
         android:key="GPS_ACC_ID" 
         android:title="ID GPS-аккаунта"
-        android:summary="Идентификатор аккаунта в учете GPS-сервера\n"
+        android:summary="Идентификатор аккаунта в учете GPS-сервера"
         android:dialogTitle="ID GPS-аккаунта"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите ID GPS-аккаунта"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:visibility="invisible"
@@ -302,12 +288,11 @@
     <EditTextPreference 
         android:key="GPS_DEV_ID" 
         android:title="ID GPS-устройства"
-        android:summary="Идентификатор устройства в учете GPS-сервера\n"
+        android:summary="Идентификатор устройства в учете GPS-сервера"
         android:dialogTitle="ID GPS-устройства"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите ID GPS-устройства"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:visibility="invisible"
@@ -316,12 +301,11 @@
     <EditTextPreference 
         android:key="GEOCODE_PREFIX" 
         android:title="Префикс геокодирования"
-        android:summary="Префикс строки адреса по запросу координат\n"
+        android:summary="Префикс строки адреса по запросу координат"
         android:dialogTitle="Префикс геокодирования"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите префикс геокодирования"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="text"
         android:defaultValue=""
         android:visibility="invisible"
@@ -330,12 +314,11 @@
     <EditTextPreference 
         android:key="TRACK_INTERVAL" 
         android:title="Интервал GPS-лога"
-        android:summary="Интервал GPS-сканирования местоположения (в секундах)\n"
+        android:summary="Интервал GPS-сканирования местоположения (в секундах)"
         android:dialogTitle="Интервал GPS-лога"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите интервал GPS-сканирования местоположения (в секундах)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="60"
         android:visibility="invisible"
@@ -344,12 +327,11 @@
     <EditTextPreference 
         android:key="TRACK_DISTANCE" 
         android:title="Дистанция GPS-лога"
-        android:summary="Дистанция GPS-сканирования местоположения (в метрах)\n"
+        android:summary="Дистанция GPS-сканирования местоположения (в метрах)"
         android:dialogTitle="Дистанция GPS-лога"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите дистанцию GPS-сканирования местоположения (в метрах)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="500"
         android:visibility="invisible"
@@ -393,12 +375,11 @@
     <EditTextPreference 
         android:key="TMETER_MIN_DISTANCE" 
         android:title="Мин. дистанция таксометра"
-        android:summary="Минимальная дистанция приращения таксометра (в метрах)\n"
+        android:summary="Минимальная дистанция приращения таксометра (в метрах)"
         android:dialogTitle="Мин. дистанция таксометра"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите минимальную дистанцию приращения таксометра (в метрах)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="7"
         android:visibility="invisible"
@@ -407,12 +388,11 @@
     <EditTextPreference 
         android:key="TMETER_MAX_DISTANCE" 
         android:title="Макс. дистанция таксометра"
-        android:summary="Максимальная дистанция приращения таксометра (в метрах)\n"
+        android:summary="Максимальная дистанция приращения таксометра (в метрах)"
         android:dialogTitle="Макс. дистанция таксометра"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите максимальную дистанцию приращения таксометра (в метрах)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="800"
         android:visibility="invisible"
@@ -421,12 +401,11 @@
     <EditTextPreference 
         android:key="TMETER_MIN_SPEED" 
         android:title="Мин. скорость таксометра"
-        android:summary="Минимальная скорость приращения таксометра (в км/час)\n"
+        android:summary="Минимальная скорость приращения таксометра (в км/час)"
         android:dialogTitle="Мин. скорость таксометра"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите минимальную скорость приращения таксометра (в км/час)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="12"
         android:visibility="invisible"
@@ -435,12 +414,11 @@
     <EditTextPreference 
         android:key="TMETER_MAX_SPEED" 
         android:title="Макс. скорость таксометра"
-        android:summary="Максимальная скорость приращения таксометра (в км/час)\n"
+        android:summary="Максимальная скорость приращения таксометра (в км/час)"
         android:dialogTitle="Макс. скорость таксометра"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите максимальную скорость приращения таксометра (в км/час)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="200"
         android:visibility="invisible"
@@ -470,12 +448,11 @@
     <EditTextPreference 
         android:key="START_BACK_TIME" 
         android:title="Стартовое время"
-        android:summary="Количество бесплатного стартового времени (в мин.)\n"
+        android:summary="Количество бесплатного стартового времени (в мин.)"
         android:dialogTitle="Стартовое время"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите количество бесплатного стартового времени (в мин)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="0"
         android:visibility="invisible"
@@ -484,12 +461,11 @@
     <EditTextPreference 
         android:key="START_BACK_DISTANCE" 
         android:title="Стартовое расстояние"
-        android:summary="Количество неучитыв. стартового расстояния (в м.)\n"
+        android:summary="Количество неучитыв. стартового расстояния (в м.)"
         android:dialogTitle="Стартовое расстояние"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите количество неучитыв. стартового расстояния (в м.)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="0"
         android:visibility="invisible"
@@ -498,12 +474,11 @@
     <EditTextPreference 
         android:key="FIXED_OVERST_DSUMM" 
         android:title="Сумма поверх ст. расстояния"
-        android:summary="Сумма оплаты поверх стартового расстояния (в руб.)\n"
+        android:summary="Сумма оплаты поверх стартового расстояния (в руб.)"
         android:dialogTitle="Сумма поверх ст. расстояния"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите сумму поверх ст. расстояния (в руб.)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="0"
         android:visibility="invisible"
@@ -512,12 +487,11 @@
     <EditTextPreference 
         android:key="REGULAR_BACK_TIME" 
         android:title="Беспл. вр. в поездке"
-        android:summary="Количество бесплатного времени в поездке (в мин.)\n"
+        android:summary="Количество бесплатного времени в поездке (в мин.)"
         android:dialogTitle="Беспл. вр. в поездке"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите количество бесплатного времени в поездке (в мин)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="1"
         android:visibility="invisible"
@@ -526,12 +500,11 @@
     <EditTextPreference 
         android:key="REGULAR_BACK_DISTANCE" 
         android:title="Расст. для беспл. вр."
-        android:summary="Расстояние, критичное для бесплатного времени в поездке (в м.)\n"
+        android:summary="Расстояние, критичное для бесплатного времени в поездке (в м.)"
         android:dialogTitle="Расст. для беспл. вр."
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите расстояние, критичное для бесплатного времени в поездке (в м.)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="30"
         android:visibility="invisible"
@@ -540,12 +513,11 @@
     <EditTextPreference 
         android:key="MAX_ORDER_PRICE" 
         android:title="Маскимальная стоимость (0-неогр.)"
-        android:summary="Максимально ограничивающая стоимость заказ (0-неогр.)\n"
+        android:summary="Максимально ограничивающая стоимость заказ (0-неогр.)"
         android:dialogTitle="Маскимальная стоимость (0-неогр.)"
         android:negativeButtonText="Отмена"
         android:dialogMessage="Введите максимальную стоимость заказа (0-неогр.)"
         android:positiveButtonText="ОК"
-        obligatory="true" 
         android:inputType="number"
         android:defaultValue="0"
         android:visibility="invisible"
@@ -644,19 +616,17 @@
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите сокращенное обозначение валюты"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="text"
             android:defaultValue="р.">
         </EditTextPreference>
         <EditTextPreference
             android:key="STATE_PHONE_CODE"
             android:title="Телефонный код страны"
-            android:summary="Установка телефонного кода страны\n"
+            android:summary="Установка телефонного кода страны"
             android:dialogTitle="Код страны"
             android:negativeButtonText="Отмена"
             android:dialogMessage="Введите код страны"
             android:positiveButtonText="ОК"
-            obligatory="true"
             android:inputType="text"
             android:defaultValue="+\+7">
         </EditTextPreference>
@@ -701,7 +671,7 @@
         android:key="USE_NEW_COORD_LOC_ALGORYTHM"
         android:title="Расш. формат зон(вт)"
         android:summary="Использовать алгоритм расширенного расчерчивания координат зон тарифов"
-        android:defaultValue="true"/>
+        android:defaultValue="true" />
     <CheckBoxPreference
         android:key="AUTO_DETECT_SECTOR"
         android:title="Автоопределение секторов"
@@ -711,6 +681,5 @@
         android:key="USE_DRIVERS_SOCKET_SERVER"
         android:title="Сервер водителей"
         android:summary="Использовать новый сервер водителей"
-        android:defaultValue="false"
-        android:enabled="false" />
+        android:defaultValue="true" />
 </PreferenceScreen>
